implement GetScreenBounds, which wasn't, oddly. this should fix placement of top-level windows which, equally oddly, seemed unbroken except in one very esoteric circumstance. bug 233081 r=ere,roc